@@ -1,5 +1,6 @@
 mpdscribble 0.22 - not yet released
   * curl: fix segmentation fault with large response body
+  * receive track ratings over the MPD client-to-client protocol
 
 
 mpdscribble 0.21 - 2011-01-03
